--- a/food.html
+++ b/food.html
@@ -14,25 +14,26 @@
     <script src="scripts/script.js" defer></script>
 
     <link
-      rel="icon"
-      type="image/png"
-      href="media/favicon/favicon-48x48.png"
-      sizes="48x48"
-    />
-    <link rel="icon" type="image/svg+xml" href="media/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="media/favicon/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="media/favicon/apple-touch-icon.png"
-    />
-    <link rel="manifest" href="media/favicon/site.webmanifest" />
+    rel="icon"
+    type="image/png"
+    href="favicon/favicon-48x48.png"
+    sizes="48x48"
+  />
+  <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+  <link rel="shortcut icon" href="favicon/favicon.ico" />
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="favicon/apple-touch-icon.png"
+  />
+  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+  <link rel="manifest" href="favicon/site.webmanifest" />
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="index.html" class="main-title"><img src="media/logo-icon.svg" alt="country-logo"></a>
+        <a href="index.html" class="main-title"><img src="media/logo.png" alt="country-logo"></a>
         <ul id="nav-buttons">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
